fdo#53113 oox::VMLExport: allow a callback to be registered for shape text

Change-Id: I1df58fa067287a37b0f62b0b05b0567da73d03b0